tests/unit/errors/test8.js
// IF con error de tipeo
if(() {
	console.log(1);
}